--- a/Multi_Function_Calculator.ipynb
+++ b/Multi_Function_Calculator.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOU/mo5S7ArcdflqJ2hk4IP",
+      "authorship_tag": "ABX9TyMVXW5LiKBqiM/zbL9BhutG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,96 +34,51 @@
       },
       "outputs": [],
       "source": [
-        "# prompt: Build a Multi-Function Calculator\n",
+        "# prompt: Build a Graphing Calculator\n",
         "\n",
-        "import math\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
         "\n",
-        "def add(x, y):\n",
-        "  \"\"\"Adds two numbers.\"\"\"\n",
-        "  return x + y\n",
+        "def graphing_calculator():\n",
+        "    \"\"\"\n",
+        "    A simple graphing calculator using matplotlib.\n",
+        "    \"\"\"\n",
         "\n",
-        "def subtract(x, y):\n",
-        "  \"\"\"Subtracts two numbers.\"\"\"\n",
-        "  return x - y\n",
+        "    while True:\n",
+        "        try:\n",
+        "            equation = input(\"Enter an equation in terms of x (or type 'quit'): \")\n",
+        "            if equation.lower() == 'quit':\n",
+        "                break\n",
         "\n",
-        "def multiply(x, y):\n",
-        "  \"\"\"Multiplies two numbers.\"\"\"\n",
-        "  return x * y\n",
+        "            x = np.linspace(-10, 10, 400)  # Adjust the range as needed\n",
         "\n",
-        "def divide(x, y):\n",
-        "  \"\"\"Divides two numbers.\"\"\"\n",
-        "  if y == 0:\n",
-        "    return \"Division by zero error!\"\n",
-        "  return x / y\n",
-        "\n",
-        "def power(x, y):\n",
-        "  \"\"\"Raises x to the power of y.\"\"\"\n",
-        "  return x ** y\n",
-        "\n",
-        "def square_root(x):\n",
-        "  \"\"\"Calculates the square root of a number.\"\"\"\n",
-        "  if x < 0:\n",
-        "    return \"Cannot calculate square root of a negative number!\"\n",
-        "  return math.sqrt(x)\n",
-        "\n",
-        "def logarithm(x, base=10):\n",
-        "  \"\"\"Calculates the logarithm of a number.\"\"\"\n",
-        "  if x <= 0:\n",
-        "    return \"Cannot calculate logarithm of a non-positive number!\"\n",
-        "  return math.log(x, base)\n",
+        "            # Evaluate the equation using NumPy\n",
+        "            try:\n",
+        "                y = eval(equation) # Evaluate the equation string\n",
+        "            except (NameError, SyntaxError):\n",
+        "                print(\"Invalid equation. Please enter a valid equation in terms of x.\")\n",
+        "                continue\n",
+        "            except TypeError as e:  # Handle TypeError for invalid operations\n",
+        "                print(\"TypeError:\", e)\n",
+        "                print(\"Invalid equation or unsupported operation. Check your equation syntax.\")\n",
+        "                continue\n",
         "\n",
         "\n",
-        "while True:\n",
-        "  print(\"\\nSelect operation:\")\n",
-        "  print(\"1. Add\")\n",
-        "  print(\"2. Subtract\")\n",
-        "  print(\"3. Multiply\")\n",
-        "  print(\"4. Divide\")\n",
-        "  print(\"5. Power\")\n",
-        "  print(\"6. Square Root\")\n",
-        "  print(\"7. Logarithm\")\n",
-        "  print(\"8. Exit\")\n",
+        "            # Plot the graph\n",
+        "            plt.plot(x, y)\n",
+        "            plt.xlabel(\"x\")\n",
+        "            plt.ylabel(\"y\")\n",
+        "            plt.title(f\"Graph of {equation}\")\n",
+        "            plt.grid(True)\n",
+        "            plt.axhline(y=0, color='black', linewidth=0.5)  # Add x-axis line\n",
+        "            plt.axvline(x=0, color='black', linewidth=0.5)  # Add y-axis line\n",
+        "            plt.show()\n",
         "\n",
-        "  choice = input(\"Enter choice(1/2/3/4/5/6/7/8): \")\n",
+        "        except Exception as e:\n",
+        "            print(f\"An error occurred: {e}\")\n",
         "\n",
-        "  if choice in ('1', '2', '3', '4', '5'):\n",
-        "    try:\n",
-        "      num1 = float(input(\"Enter first number: \"))\n",
-        "      num2 = float(input(\"Enter second number: \"))\n",
-        "    except ValueError:\n",
-        "      print(\"Invalid input. Please enter numbers only.\")\n",
-        "      continue\n",
-        "\n",
-        "    if choice == '1':\n",
-        "      print(num1, \"+\", num2, \"=\", add(num1, num2))\n",
-        "    elif choice == '2':\n",
-        "      print(num1, \"-\", num2, \"=\", subtract(num1, num2))\n",
-        "    elif choice == '3':\n",
-        "      print(num1, \"*\", num2, \"=\", multiply(num1, num2))\n",
-        "    elif choice == '4':\n",
-        "      print(num1, \"/\", num2, \"=\", divide(num1, num2))\n",
-        "    elif choice == '5':\n",
-        "      print(num1, \"**\", num2, \"=\", power(num1, num2))\n",
-        "\n",
-        "  elif choice in ('6', '7'):\n",
-        "    try:\n",
-        "      num1 = float(input(\"Enter number: \"))\n",
-        "    except ValueError:\n",
-        "      print(\"Invalid input. Please enter a number.\")\n",
-        "      continue\n",
-        "\n",
-        "    if choice == '6':\n",
-        "      print(\"Square root of\", num1, \"=\", square_root(num1))\n",
-        "    elif choice == '7':\n",
-        "      try:\n",
-        "        base = float(input(\"Enter base for logarithm (default is 10): \") or 10)\n",
-        "        print(\"Logarithm of\", num1, \"base\", base, \"=\", logarithm(num1, base))\n",
-        "      except ValueError:\n",
-        "        print(\"Invalid input for base. Please enter a number.\")\n",
-        "  elif choice == '8':\n",
-        "    break\n",
-        "  else:\n",
-        "    print(\"Invalid Input\")"
+        "if __name__ == \"__main__\":\n",
+        "    graphing_calculator()"
       ]
     }
   ]
